--- a/example/index.css
+++ b/example/index.css
@@ -1,9 +1,16 @@
 body {
+  margin: 0;
   background-color: #282c34;
 }
 .app {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+h2 {
+  color: #fff;
+  text-transform: capitalize;
 }
